tweaks in styles, corrected .title movement to not drop too much, added optional chaining in image chain on cards show

--- a/src/app/components/main/moviecards/moviecards.component.css
+++ b/src/app/components/main/moviecards/moviecards.component.css
@@ -10,9 +10,9 @@
 .card {
   flex: 1;
   margin: auto;
-  min-width: 250px;
-  max-width: 300px;
-  width: 240px;
+  /* min-width: 250px; */
+  /* max-width: 300px; */
+  /* width: 240px; */
   height: 337px;
   background:var(--btn-proper-color);
   border-radius: 10px;
@@ -38,7 +38,8 @@
   bottom: 0px;
 }
 .card .poster img {
-  width: 100%;
+  height: 337px;
+  object-fit: contain;
   transition: 0.5s;
 }
 .card .details {
